--- a/Lecture 2/exercises/2_cleaning_input_data.ipynb
+++ b/Lecture 2/exercises/2_cleaning_input_data.ipynb
@@ -48,19 +48,12 @@
     "FEATURE_PROPERTIES = [ CLASS_PROPERTY, 'CAPDATE' ]\n",
     "\n",
     "CLASS_MAPPING = {\n",
-    "    'Citrus (unspecified)': [ 'Citrus (unspecified)' ],\n",
-    "    'Fallow': [ 'Fallow' ],\n",
-    "    'Lemon': [ 'Lemon' ],\n",
-    "    'Lucerne/Medics': [ 'Lucerne/Medics' ],\n",
-    "    'Naartjies': [ 'Naartjies' ],\n",
-    "    'Nectarine': [ 'Nectarine' ],\n",
-    "    'Olives': [ 'Olives' ],\n",
-    "    'Oranges': [ 'Oranges' ],\n",
-    "    'Peaches': [ 'Peaches', 'Peach', 'peach' ],\n",
-    "    'Pear': [ 'Pear' ],\n",
-    "    'Planted Pastures': [ 'Planted Pastures', 'Planted Pastures (perennial)' ],\n",
-    "    'Weeds': [ 'Weeds' ],\n",
-    "    'Wine Grapes': [ 'Wine grapes' ]\n",
+    "    'Barley': [ 'Barley' ],\n",
+    "    'Leeks': [ 'Leeks' ],\n",
+    "    'Peppers': [ 'Peppers' ],\n",
+    "    'Oranges': [ 'Oranges', 'Orange', 'orange' ],\n",
+    "    'Tomatoes': [ 'Tomatoes' ],\n",
+    "    'Wheat': [ 'Wheat' ]\n",
     "}"
    ]
   },
@@ -211,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
