--- a/Lecture 2/exercises/3_matching_imagery.ipynb
+++ b/Lecture 2/exercises/3_matching_imagery.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "['34HCH']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -168,11 +168,11 @@
     "    files = ['TCI.tif']\n",
     "    \n",
     "    for f in files:\n",
-    "        key = f'sentinel-s2-l2a-cogs/{tile[0:2]}/{tile[2]}/{tile[3:5]}/{year}/{int(month)}/{scene}/{file}'\n",
+    "        key = f'sentinel-s2-l2a-cogs/{tile[0:2]}/{tile[2]}/{tile[3:5]}/{year}/{int(month)}/{scene}/{f}'\n",
     "    \n",
     "        fname = key.split('/')[-1]\n",
     "        s3.download_file('sentinel-cogs', key, f'../data/imagery/{scene}/{fname}')\n",
-    "    break"
+    "    break # Remove this line to download all of the scenes"
    ]
   },
   {
