Add platform properties and set STAC version

--- a/Lecture 3/exercises/1_create_source_imagery_stac_item.ipynb
+++ b/Lecture 3/exercises/1_create_source_imagery_stac_item.ipynb
@@ -110,7 +110,10 @@
     "import rasterio\n",
     "import rasterio.warp\n",
     "import rasterio.features\n",
-    "import pystac"
+    "import pystac\n",
+    "\n",
+    "# The default STAC version for PySTAC is 1.0.0-beta.2, but 1.0.0-rc.2 is the most recent.\n",
+    "pystac.set_stac_version('1.0.0-rc.2')"
    ]
   },
   {
@@ -239,8 +242,10 @@
       "              'type': 'Polygon'},\n",
       " 'id': 'S2A_34HCH_20171008_0_L2A_TCI_source',\n",
       " 'links': [],\n",
-      " 'properties': {'datetime': '2017-10-08T00:00:00Z'},\n",
-      " 'stac_version': '1.0.0-beta.2',\n",
+      " 'properties': {'constellation': 'Sentinel-2',\n",
+      "                'datetime': '2017-10-08T00:00:00Z',\n",
+      "                'platform': 'Sentinel-2'},\n",
+      " 'stac_version': '1.0.0-rc.2',\n",
       " 'type': 'Feature'}\n"
      ]
     }
@@ -251,7 +256,10 @@
     "    geometry=geom_4326,\n",
     "    bbox=bounds_4326,\n",
     "    datetime=dt,\n",
-    "    properties={}\n",
+    "    properties={\n",
+    "        'platform': 'Sentinel-2',\n",
+    "        'constellation': 'Sentinel-2'\n",
+    "    }\n",
     ")\n",
     "pprint(item.to_dict())"
    ]
@@ -330,8 +338,10 @@
       "              'type': 'Polygon'},\n",
       " 'id': 'S2A_34HCH_20171008_0_L2A_TCI_source',\n",
       " 'links': [],\n",
-      " 'properties': {'datetime': '2017-10-08T00:00:00Z'},\n",
-      " 'stac_version': '1.0.0-beta.2',\n",
+      " 'properties': {'constellation': 'Sentinel-2',\n",
+      "                'datetime': '2017-10-08T00:00:00Z',\n",
+      "                'platform': 'Sentinel-2'},\n",
+      " 'stac_version': '1.0.0-rc.2',\n",
       " 'type': 'Feature'}\n"
      ]
     }
@@ -356,7 +366,7 @@
    "source": [
     "## Save Item\n",
     "\n",
-    "We still have a bit of work to do on our Item, but we'll save it to file so that we can work on it some more in the next notebook."
+    "Finally, we'll save our Item to a JSON file."
    ]
   },
   {
