Update some text and use absolute links

--- a/Lecture 3/exercises/1_create_source_imagery_stac_item.ipynb
+++ b/Lecture 3/exercises/1_create_source_imagery_stac_item.ipynb
@@ -2,12 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3628ccf7",
+   "metadata": {},
+   "source": [
+    "# Create Source Imagery STAC Item\n",
+    "\n",
+    "In this exercise, we will:\n",
+    "\n",
+    "* Discuss STAC Items and what they represent\n",
+    "* Discuss STAC Assets and how they relate to Items\n",
+    "* Use the `pystac` package to create a STAC Item to represent our source imagery tile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9a31528",
    "metadata": {},
    "source": [
-    "# STAC Items\n",
+    "## STAC Items\n",
     "\n",
-    "A **STAC Item** is the core, atomic unit in STAC. It represents a single spatio-temporal asset for a particular place and time. STAC Items are represented as [GeoJSON Features](https://tools.ietf.org/html/rfc7946#section-3.2) with additional [foreign members](https://tools.ietf.org/html/rfc7946#section-6) (properties) relevant to the STAC spec.\n",
+    "A **[STAC Item](https://github.com/radiantearth/stac-spec/tree/master/item-spec)** is the core, atomic unit in STAC. It represents a single spatio-temporal asset for a particular place and time. STAC Items are represented as [GeoJSON Features](https://tools.ietf.org/html/rfc7946#section-3.2) with additional [foreign members](https://tools.ietf.org/html/rfc7946#section-6) (properties) relevant to the STAC spec.\n",
     "\n",
     "Among other things, all STAC objects have the following properties:\n",
     "\n",
@@ -81,9 +95,9 @@
    "id": "96444f3c",
    "metadata": {},
    "source": [
-    "# Source Imagery Item\n",
+    "## Source Imagery Item\n",
     "\n",
-    "## Create Core Item\n",
+    "### Create Core Item\n",
     "\n",
     "To get started, we will create a [`pystac.Item`](https://pystac.readthedocs.io/en/latest/api.html#item) for our source imagery with the just the core properties. Later, we will add some properties related to some of the extensions relevant to our data. Taking a look at the `pystac.Item` docs, we can see that we'll at least need to specify the `id`, `geometry`, `bbox`, and `datetime` arguments, as well as a `properties` dictionary."
    ]
@@ -104,16 +118,13 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
+    "import json\n",
     "from pathlib import Path\n",
-    "from pprint import pprint\n",
     "\n",
     "import rasterio\n",
     "import rasterio.warp\n",
     "import rasterio.features\n",
-    "import pystac\n",
-    "\n",
-    "# The default STAC version for PySTAC is 1.0.0-beta.2, but 1.0.0-rc.2 is the most recent.\n",
-    "pystac.set_stac_version('1.0.0-rc.2')"
+    "import pystac"
    ]
   },
   {
@@ -135,12 +146,33 @@
      "output_type": "stream",
      "text": [
       "Geometry (EPSG:4326):\n",
-      "{'coordinates': [[(19.282309157846285, -33.65646563177132),\n",
-      "                  (19.28079050631379, -33.732735055742886),\n",
-      "                  (19.353625203525958, -33.733727878895834),\n",
-      "                  (19.35507958936285, -33.65745561206109),\n",
-      "                  (19.282309157846285, -33.65646563177132)]],\n",
-      " 'type': 'Polygon'}\n",
+      "{\n",
+      "    \"type\": \"Polygon\",\n",
+      "    \"coordinates\": [\n",
+      "        [\n",
+      "            [\n",
+      "                19.282309157846285,\n",
+      "                -33.65646563177132\n",
+      "            ],\n",
+      "            [\n",
+      "                19.28079050631379,\n",
+      "                -33.732735055742886\n",
+      "            ],\n",
+      "            [\n",
+      "                19.353625203525958,\n",
+      "                -33.733727878895834\n",
+      "            ],\n",
+      "            [\n",
+      "                19.35507958936285,\n",
+      "                -33.65745561206109\n",
+      "            ],\n",
+      "            [\n",
+      "                19.282309157846285,\n",
+      "                -33.65646563177132\n",
+      "            ]\n",
+      "        ]\n",
+      "    ]\n",
+      "}\n",
       "\n",
       "Bounds (EPSG:4326):\n",
       "(19.28079050631379, -33.733727878895834, 19.35507958936285, -33.65646563177132)\n"
@@ -180,10 +212,10 @@
     "bounds_4326 = rasterio.features.bounds(geom_4326)\n",
     "\n",
     "print('Geometry (EPSG:4326):')\n",
-    "pprint(geom_4326)\n",
+    "print(json.dumps(geom_4326, indent=4))\n",
     "print('')\n",
     "print('Bounds (EPSG:4326):')\n",
-    "pprint(bounds_4326)"
+    "print(bounds_4326)"
    ]
   },
   {
@@ -229,24 +261,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'assets': {},\n",
-      " 'bbox': (19.28079050631379,\n",
-      "          -33.733727878895834,\n",
-      "          19.35507958936285,\n",
-      "          -33.65646563177132),\n",
-      " 'geometry': {'coordinates': [[(19.282309157846285, -33.65646563177132),\n",
-      "                               (19.28079050631379, -33.732735055742886),\n",
-      "                               (19.353625203525958, -33.733727878895834),\n",
-      "                               (19.35507958936285, -33.65745561206109),\n",
-      "                               (19.282309157846285, -33.65646563177132)]],\n",
-      "              'type': 'Polygon'},\n",
-      " 'id': 'S2A_34HCH_20171008_0_L2A_TCI_source',\n",
-      " 'links': [],\n",
-      " 'properties': {'constellation': 'Sentinel-2',\n",
-      "                'datetime': '2017-10-08T00:00:00Z',\n",
-      "                'platform': 'Sentinel-2'},\n",
-      " 'stac_version': '1.0.0-rc.2',\n",
-      " 'type': 'Feature'}\n"
+      "{\n",
+      "    \"type\": \"Feature\",\n",
+      "    \"stac_version\": \"1.0.0-beta.2\",\n",
+      "    \"id\": \"S2A_34HCH_20171008_0_L2A_TCI_source\",\n",
+      "    \"properties\": {\n",
+      "        \"platform\": \"Sentinel-2\",\n",
+      "        \"constellation\": \"Sentinel-2\",\n",
+      "        \"datetime\": \"2017-10-08T00:00:00Z\"\n",
+      "    },\n",
+      "    \"geometry\": {\n",
+      "        \"type\": \"Polygon\",\n",
+      "        \"coordinates\": [\n",
+      "            [\n",
+      "                [\n",
+      "                    19.282309157846285,\n",
+      "                    -33.65646563177132\n",
+      "                ],\n",
+      "                [\n",
+      "                    19.28079050631379,\n",
+      "                    -33.732735055742886\n",
+      "                ],\n",
+      "                [\n",
+      "                    19.353625203525958,\n",
+      "                    -33.733727878895834\n",
+      "                ],\n",
+      "                [\n",
+      "                    19.35507958936285,\n",
+      "                    -33.65745561206109\n",
+      "                ],\n",
+      "                [\n",
+      "                    19.282309157846285,\n",
+      "                    -33.65646563177132\n",
+      "                ]\n",
+      "            ]\n",
+      "        ]\n",
+      "    },\n",
+      "    \"links\": [],\n",
+      "    \"assets\": {},\n",
+      "    \"bbox\": [\n",
+      "        19.28079050631379,\n",
+      "        -33.733727878895834,\n",
+      "        19.35507958936285,\n",
+      "        -33.65646563177132\n",
+      "    ]\n",
+      "}\n"
      ]
     }
    ],
@@ -261,7 +320,7 @@
     "        'constellation': 'Sentinel-2'\n",
     "    }\n",
     ")\n",
-    "pprint(item.to_dict())"
+    "print(json.dumps(item.to_dict(), indent=4))"
    ]
   },
   {
@@ -269,7 +328,7 @@
    "id": "74e63dd5",
    "metadata": {},
    "source": [
-    "## Source Imagery Asset\n",
+    "### Source Imagery Asset\n",
     "\n",
     "A **STAC Asset** represents a file associated with an Item (or Collection) that can be downloaded. Some common examples of assets include:\n",
     "\n",
@@ -286,7 +345,9 @@
    "id": "1eccd428",
    "metadata": {},
    "source": [
-    "The [`pystac.Asset` docs](https://pystac.readthedocs.io/en/latest/api.html#asset) tell us that we only need to define the `href` argument to create a new Asset. The `href` property represents the path to the asset, which can either be an absolute URL or a relative URL/path. Since we are only going to be working with our STAC Items locally, we will use a relative path. This path should be *relative to the STAC Item that contains the Asset* and not necessarily the current working directory. We will plan on putting our STAC Items in the data folder for this lecture, so the relative path to the Asset will be `./tiles/S2A_34HCH_20171008_0_L2A_TCI.tif`.\n",
+    "The [`pystac.Asset` docs](https://pystac.readthedocs.io/en/latest/api.html#asset) tell us that we only need to define the `href` argument to create a new Asset. The `href` property represents the path to the asset, which can either be an absolute URL or a relative URL/path. Since we are only going to be working with our STAC Items locally, we will use a relative path. This path should be *relative to the STAC Item that contains the Asset* and not necessarily the current working directory. \n",
+    "\n",
+    "We will use an absolute path to our asset for now, but will turn this into a relative path in a later exercise when we create our Collection. The relative path will be more portable if we want to zip the entire collections and move it to a new location.\n",
     "\n",
     "We will also define the `roles` and `type` arguments to make it more clear what this asset represents. The STAC Best Practices documentation has a nice section on [\"Common Media Types in STAC\"](https://github.com/radiantearth/stac-spec/blob/master/best-practices.md#common-media-types-in-stac) that we can use to select the right `type` argument. Likewise, we can use the [\"List of Asset Roles\"](https://github.com/radiantearth/stac-spec/blob/master/best-practices.md#list-of-asset-roles) section of the STAC Best Practices docs to select the right `roles`. In our case, we will use the `visual` role and the `image/tiff; application=geotiff` media type."
    ]
@@ -299,7 +360,7 @@
    "outputs": [],
    "source": [
     "asset = pystac.Asset(\n",
-    "    href='./tiles/S2A_34HCH_20171008_0_L2A_TCI.tif',\n",
+    "    href=str(source_img.resolve()),\n",
     "    media_type='image/tiff; application=geotiff',\n",
     "    roles=['visual']\n",
     ")"
@@ -323,32 +384,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'assets': {'visual': {'href': './tiles/S2A_34HCH_20171008_0_L2A_TCI.tif',\n",
-      "                       'roles': ['visual'],\n",
-      "                       'type': 'image/tiff; application=geotiff'}},\n",
-      " 'bbox': (19.28079050631379,\n",
-      "          -33.733727878895834,\n",
-      "          19.35507958936285,\n",
-      "          -33.65646563177132),\n",
-      " 'geometry': {'coordinates': [[(19.282309157846285, -33.65646563177132),\n",
-      "                               (19.28079050631379, -33.732735055742886),\n",
-      "                               (19.353625203525958, -33.733727878895834),\n",
-      "                               (19.35507958936285, -33.65745561206109),\n",
-      "                               (19.282309157846285, -33.65646563177132)]],\n",
-      "              'type': 'Polygon'},\n",
-      " 'id': 'S2A_34HCH_20171008_0_L2A_TCI_source',\n",
-      " 'links': [],\n",
-      " 'properties': {'constellation': 'Sentinel-2',\n",
-      "                'datetime': '2017-10-08T00:00:00Z',\n",
-      "                'platform': 'Sentinel-2'},\n",
-      " 'stac_version': '1.0.0-rc.2',\n",
-      " 'type': 'Feature'}\n"
+      "{\n",
+      "    \"type\": \"Feature\",\n",
+      "    \"stac_version\": \"1.0.0-beta.2\",\n",
+      "    \"id\": \"S2A_34HCH_20171008_0_L2A_TCI_source\",\n",
+      "    \"properties\": {\n",
+      "        \"platform\": \"Sentinel-2\",\n",
+      "        \"constellation\": \"Sentinel-2\",\n",
+      "        \"datetime\": \"2017-10-08T00:00:00Z\"\n",
+      "    },\n",
+      "    \"geometry\": {\n",
+      "        \"type\": \"Polygon\",\n",
+      "        \"coordinates\": [\n",
+      "            [\n",
+      "                [\n",
+      "                    19.282309157846285,\n",
+      "                    -33.65646563177132\n",
+      "                ],\n",
+      "                [\n",
+      "                    19.28079050631379,\n",
+      "                    -33.732735055742886\n",
+      "                ],\n",
+      "                [\n",
+      "                    19.353625203525958,\n",
+      "                    -33.733727878895834\n",
+      "                ],\n",
+      "                [\n",
+      "                    19.35507958936285,\n",
+      "                    -33.65745561206109\n",
+      "                ],\n",
+      "                [\n",
+      "                    19.282309157846285,\n",
+      "                    -33.65646563177132\n",
+      "                ]\n",
+      "            ]\n",
+      "        ]\n",
+      "    },\n",
+      "    \"links\": [],\n",
+      "    \"assets\": {\n",
+      "        \"visual\": {\n",
+      "            \"href\": \"/Users/jduckworth/Code/ml-hub/ml4eo-bootcamp-2021/Lecture 3/data/tiles/S2A_34HCH_20171008_0_L2A_TCI.tif\",\n",
+      "            \"type\": \"image/tiff; application=geotiff\",\n",
+      "            \"roles\": [\n",
+      "                \"visual\"\n",
+      "            ]\n",
+      "        }\n",
+      "    },\n",
+      "    \"bbox\": [\n",
+      "        19.28079050631379,\n",
+      "        -33.733727878895834,\n",
+      "        19.35507958936285,\n",
+      "        -33.65646563177132\n",
+      "    ]\n",
+      "}\n"
      ]
     }
    ],
    "source": [
     "item.add_asset(\"visual\", asset)\n",
-    "pprint(item.to_dict())"
+    "print(json.dumps(item.to_dict(), indent=4))"
    ]
   },
   {
@@ -364,9 +458,9 @@
    "id": "62ab507c",
    "metadata": {},
    "source": [
-    "## Save Item\n",
+    "### Save Item\n",
     "\n",
-    "Finally, we'll save our Item to a JSON file."
+    "Finally, we'll save our Item to a JSON file. We'll save this Item into a `tmp` folder because we will be making some changes to the links when we create a Collection in the 3rd exercise."
    ]
   },
   {
@@ -376,7 +470,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "item_path = source_img.parent.parent / f'{item.id}.json'\n",
+    "tmp_dir = source_img.parent.parent.parent / 'tmp'\n",
+    "tmp_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "item_path = tmp_dir / f'{item.id}.json'\n",
     "item.save_object(dest_href=item_path)"
    ]
   },
