--- a/Lecture 3/exercises/2_create_stac_label_item.ipynb
+++ b/Lecture 3/exercises/2_create_stac_label_item.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c491ede0",
+   "id": "903387bb",
    "metadata": {},
    "source": [
     "Finally, we'll create the STAC Item and add the Assets to it. We can get the geometry information in the same way as the first exercise, and we will reuse the ID and datetime information from the first exercise to fill in some of the fields for this Item. We will also use the [Label Extension Item Properties](https://github.com/stac-extensions/label#item-properties) documentation to determine what property values we should include (since our labels are rasters, many of these will be `null`)."
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5ef2539c",
+   "id": "9dd4444b",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d07cf3c",
+   "id": "54634cb5",
    "metadata": {},
    "source": [
     "Notice that PySTAC has used an absolute path in our link based on the location of the source imagery Item. This is fine for now, we will turn this into a relative path in the next exercise so that the items are more portable."
@@ -318,7 +318,9 @@
    "id": "3b08ca0d",
    "metadata": {},
    "source": [
-    "### Save Item"
+    "### Save Item\n",
+    "\n",
+    "Finally, we save the labels Item to the same temporary directory as our source imagery Item."
    ]
   },
   {
@@ -335,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd582b9b",
+   "id": "0b47dbfa",
    "metadata": {},
    "outputs": [],
    "source": []
