Updated language in notebooks and added a README for lecture 2

--- a/Lecture 2/exercises/2_cleaning_input_data.ipynb
+++ b/Lecture 2/exercises/2_cleaning_input_data.ipynb
@@ -105,7 +105,7 @@
     "Visualizing Automatic Geometry Fixing\n",
     "---\n",
     "\n",
-    "This cell shows how the automatic fixing of invalid geometries does not always produce the result you would expect. In this case we would expect the fixed geometry to look more like a single rectangle rather than two triangles. Typically it is best to manually fix invalid geometries so that the boundary more closely matches reality but we will use the automatic geometry fixing in this exercise."
+    "This cell shows how the automatic fixing of invalid geometries does not always produce the result you would expect. In this case we would expect the fixed geometry to look more like a single rectangle rather than two triangles. Usually it is best to manually edit the geometries in software like [QGIS](https://www.qgis.org/en/site/) and match it with imagery so the edited geometries match the actual field geometry exactly. However, this process is very time intensive and is not feasible for very large datasets. In this exercise we will use the automatic method as it is \"good enough\"."
    ]
   },
   {
