--- a/Lecture 2/exercises/3_matching_imagery.ipynb
+++ b/Lecture 2/exercises/3_matching_imagery.ipynb
@@ -69,7 +69,7 @@
     "Searching for Imagery\n",
     "---\n",
     "\n",
-    "These next few cells will find all of the Sentinel-2 scenes which fall within our temporal and spatial ranges. We see here that there are 58 scenes which match our requirements."
+    "These next few cells will find all of the Sentinel-2 scenes which fall within our temporal and spatial ranges. We see here that there are 58 scenes which match our requirements. The S3 bucket which we are grabbing our imagery from does not require authentication but other buckets, such as the official [Sentinel-2 bucket](https://registry.opendata.aws/sentinel-2/) require authentication and are requestor pays, meaning you will be billed for the data transfer costs."
    ]
   },
   {
