--- a/Lecture 2/exercises/4_rasterizing_input_data_packaging_imagery.ipynb
+++ b/Lecture 2/exercises/4_rasterizing_input_data_packaging_imagery.ipynb
@@ -136,7 +136,17 @@
     "Done!\n",
     "---\n",
     "\n",
-    "You now have a complete training dataset from just a simple shapefile of data collected in the field. The label raster, label raster value mapping, and cropped imagery are all located within the `data/dataset/` directory. In a follow up lecture you will learn how to create a [STAC](http://stacspec.org/) catalog of this dataset which allows for easy importing into [Radiant MLHub](https://mlhub.earth/)."
+    "You now have a complete training dataset from just a simple shapefile of data collected in the field. The label raster, label raster value mapping, and cropped imagery are all located within the `data/dataset/` directory. In a follow up lecture you will learn how to create a [STAC](http://stacspec.org/) catalog of this dataset which enables your datasets to be more discoverable and allows for easy importing into [Radiant MLHub](https://mlhub.earth/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Homework\n",
+    "---\n",
+    "\n",
+    "Try to create a complete training dataset using these methods with another input dataset. The label file from the [Smallholder Cashew Plantations in Benin](https://registry.mlhub.earth/10.34911/rdnt.hfv20i/) is a good input dataset to try this with."
    ]
   }
  ],
