modified the jupyter file to make better use of mlhub's python client functions

--- a/Lecture 6/machine_learning_python.ipynb
+++ b/Lecture 6/machine_learning_python.ipynb
@@ -62,44 +62,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "idiv_asia_crop_type: A crop type dataset for consistent land cover classification in Central Asia\n",
-      "bigearthnet_v1: BigEarthNet\n",
-      "microsoft_chesapeake: Chesapeake Land Cover\n",
-      "ref_african_crops_kenya_02: CV4A Kenya Crop Type Competition\n",
-      "ref_african_crops_uganda_01: Dalberg Data Insights Crop Type Uganda\n",
-      "rti_rwanda_crop_type: Drone Imagery Classification Training Dataset for Crop Types in Rwanda\n",
-      "ref_african_crops_tanzania_01: Great African Food Company Crop Type Tanzania\n",
-      "landcovernet_v1: LandCoverNet\n",
-      "open_cities_ai_challenge: Open Cities AI Challenge\n",
-      "ref_african_crops_kenya_01: PlantVillage Crop Type Kenya\n",
-      "su_african_crops_ghana: Semantic Segmentation of Crop Type in Ghana\n",
-      "su_african_crops_south_sudan: Semantic Segmentation of Crop Type in South Sudan\n",
-      "sen12floods: SEN12-FLOOD\n",
-      "ts_cashew_benin: Smallholder Cashew Plantations in Benin\n",
-      "spacenet1: Spacenet 1\n",
-      "spacenet2: Spacenet 2\n",
-      "spacenet3: Spacenet 3\n",
-      "spacenet4: Spacenet 4\n",
-      "spacenet5: Spacenet 5\n",
-      "spacenet6: Spacenet 6\n",
-      "spacenet7: Spacenet 7\n",
-      "nasa_tropical_storm_competition: Tropical Cyclone Wind Estimation Competition\n",
-      "su_sar_moisture_content_main: Western USA Live Fuel Moisture\n"
+      "idiv_asia_crop_type             : A crop type dataset for consistent land cover classification in Central Asia\n",
+      "bigearthnet_v1                  : BigEarthNet\n",
+      "microsoft_chesapeake            : Chesapeake Land Cover\n",
+      "ref_african_crops_kenya_02      : CV4A Kenya Crop Type Competition\n",
+      "ref_african_crops_uganda_01     : Dalberg Data Insights Crop Type Uganda\n",
+      "rti_rwanda_crop_type            : Drone Imagery Classification Training Dataset for Crop Types in Rwanda\n",
+      "ref_african_crops_tanzania_01   : Great African Food Company Crop Type Tanzania\n",
+      "landcovernet_v1                 : LandCoverNet\n",
+      "open_cities_ai_challenge        : Open Cities AI Challenge\n",
+      "ref_african_crops_kenya_01      : PlantVillage Crop Type Kenya\n",
+      "su_african_crops_ghana          : Semantic Segmentation of Crop Type in Ghana\n",
+      "su_african_crops_south_sudan    : Semantic Segmentation of Crop Type in South Sudan\n",
+      "sen12floods                     : SEN12-FLOOD\n",
+      "ts_cashew_benin                 : Smallholder Cashew Plantations in Benin\n",
+      "spacenet1                       : Spacenet 1\n",
+      "spacenet2                       : Spacenet 2\n",
+      "spacenet3                       : Spacenet 3\n",
+      "spacenet4                       : Spacenet 4\n",
+      "spacenet5                       : Spacenet 5\n",
+      "spacenet6                       : Spacenet 6\n",
+      "spacenet7                       : Spacenet 7\n",
+      "nasa_tropical_storm_competition : Tropical Cyclone Wind Estimation Competition\n",
+      "su_sar_moisture_content_main    : Western USA Live Fuel Moisture\n"
      ]
     }
    ],
    "source": [
     "#let's view the datasets contained in the data registry\n",
-    "from radiant_mlhub import Dataset\n",
+    "from radiant_mlhub import Dataset, Collection #Collection module will be used for viewing collection ids\n",
     "for dataset in Dataset.list():\n",
-    "    print(f'{dataset.id}: {dataset.title}')"
+    "    print(f'{dataset.id:<32}: {dataset.title}')"
    ]
   },
   {
@@ -117,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Collection id=su_sar_moisture_content>]"
+       "[<Collection id=rti_rwanda_crop_type_labels>, <Collection id=rti_rwanda_crop_type_source>, <Collection id=rti_rwanda_crop_type_raw>]"
       ]
      },
      "execution_count": 2,
@@ -126,158 +126,8 @@
     }
    ],
    "source": [
-    "dataset.collections #viewing the collection id"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The drone imagery dataset (rti rwanda crop type) is a collection.\n",
-    "We can view its contents using the Collection module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Collection id=ref_african_crops_kenya_01_labels> \n",
-      "\n",
-      "<Collection id=ref_african_crops_kenya_01_source> \n",
-      "\n",
-      "<Collection id=ref_african_crops_tanzania_01_labels> \n",
-      "\n",
-      "<Collection id=ref_african_crops_tanzania_01_source> \n",
-      "\n",
-      "<Collection id=ref_african_crops_uganda_01_labels> \n",
-      "\n",
-      "<Collection id=ref_african_crops_uganda_01_source> \n",
-      "\n",
-      "<Collection id=microsoft_chesapeake_landsat_leaf_off> \n",
-      "\n",
-      "<Collection id=microsoft_chesapeake_buildings> \n",
-      "\n",
-      "<Collection id=sn4_AOI_6_Atlanta> \n",
-      "\n",
-      "<Collection id=ref_african_crops_kenya_02_labels> \n",
-      "\n",
-      "<Collection id=ref_african_crops_kenya_02_source> \n",
-      "\n",
-      "<Collection id=microsoft_chesapeake_naip> \n",
-      "\n",
-      "<Collection id=microsoft_chesapeake_nlcd> \n",
-      "\n",
-      "<Collection id=microsoft_chesapeake_lc> \n",
-      "\n",
-      "<Collection id=microsoft_chesapeake_landsat_leaf_on> \n",
-      "\n",
-      "<Collection id=sn1_AOI_1_RIO> \n",
-      "\n",
-      "<Collection id=sn2_AOI_2_Vegas> \n",
-      "\n",
-      "<Collection id=sn2_AOI_5_Khartoum> \n",
-      "\n",
-      "<Collection id=sn3_AOI_2_Vegas> \n",
-      "\n",
-      "<Collection id=sn3_AOI_5_Khartoum> \n",
-      "\n",
-      "<Collection id=sn5_AOI_8_Mumbai> \n",
-      "\n",
-      "<Collection id=sn6_AOI_11_Rotterdam> \n",
-      "\n",
-      "<Collection id=sn2_AOI_3_Paris> \n",
-      "\n",
-      "<Collection id=sn2_AOI_4_Shanghai> \n",
-      "\n",
-      "<Collection id=sn3_AOI_3_Paris> \n",
-      "\n",
-      "<Collection id=sn3_AOI_4_Shanghai> \n",
-      "\n",
-      "<Collection id=sn5_AOI_7_Moscow> \n",
-      "\n",
-      "<Collection id=su_sar_moisture_content> \n",
-      "\n",
-      "<Collection id=ref_landcovernet_v1_source> \n",
-      "\n",
-      "<Collection id=ref_landcovernet_v1_labels> \n",
-      "\n",
-      "<Collection id=nasa_tropical_storm_competition_train_labels> \n",
-      "\n",
-      "<Collection id=nasa_tropical_storm_competition_train_source> \n",
-      "\n",
-      "<Collection id=nasa_tropical_storm_competition_test_source> \n",
-      "\n",
-      "<Collection id=su_african_crops_south_sudan_labels> \n",
-      "\n",
-      "<Collection id=su_african_crops_south_sudan_source_planet> \n",
-      "\n",
-      "<Collection id=su_african_crops_south_sudan_source_s1> \n",
-      "\n",
-      "<Collection id=su_african_crops_south_sudan_source_s2> \n",
-      "\n",
-      "<Collection id=su_african_crops_ghana_labels> \n",
-      "\n",
-      "<Collection id=su_african_crops_ghana_source_planet> \n",
-      "\n",
-      "<Collection id=su_african_crops_ghana_source_s1> \n",
-      "\n",
-      "<Collection id=su_african_crops_ghana_source_s2> \n",
-      "\n",
-      "<Collection id=sn7_train_source> \n",
-      "\n",
-      "<Collection id=sn7_test_source> \n",
-      "\n",
-      "<Collection id=sn7_train_labels> \n",
-      "\n",
-      "<Collection id=open_cities_ai_challenge_test> \n",
-      "\n",
-      "<Collection id=open_cities_ai_challenge_train_tier_1_labels> \n",
-      "\n",
-      "<Collection id=open_cities_ai_challenge_train_tier_1_source> \n",
-      "\n",
-      "<Collection id=open_cities_ai_challenge_train_tier_2_labels> \n",
-      "\n",
-      "<Collection id=open_cities_ai_challenge_train_tier_2_source> \n",
-      "\n",
-      "<Collection id=ts_cashew_benin_labels> \n",
-      "\n",
-      "<Collection id=ts_cashew_benin_source> \n",
-      "\n",
-      "<Collection id=sen12floods_s1_labels> \n",
-      "\n",
-      "<Collection id=sen12floods_s1_source> \n",
-      "\n",
-      "<Collection id=sen12floods_s2_labels> \n",
-      "\n",
-      "<Collection id=sen12floods_s2_source> \n",
-      "\n",
-      "<Collection id=bigearthnet_v1_labels> \n",
-      "\n",
-      "<Collection id=bigearthnet_v1_source> \n",
-      "\n",
-      "<Collection id=idiv_asia_crop_type_labels> \n",
-      "\n",
-      "<Collection id=nasa_tropical_storm_competition_test_labels> \n",
-      "\n",
-      "<Collection id=rti_rwanda_crop_type_labels> \n",
-      "\n",
-      "<Collection id=rti_rwanda_crop_type_source> \n",
-      "\n",
-      "<Collection id=rti_rwanda_crop_type_raw> \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from radiant_mlhub import Collection\n",
-    "collections = Collection.list()\n",
-    "for i in collections:\n",
-    "    print (i, '\\n')"
+    "dataset = Dataset.fetch('rti_rwanda_crop_type')\n",
+    "dataset.collections #viewing the collection ids under the crop type dataset"
    ]
   },
   {
@@ -289,6 +139,10 @@
     "1. Collection id = rti_rwanda_crop_type_labels \n",
     "\n",
     "2. Collection id = rti_rwanda_crop_type_source\n",
+    "\n",
+    "3. Collection id = rti_rwanda_crop_type_raw\n",
+    "\n",
+    "In this exercise, we will use only the first two collections.\n",
     "\n",
     "Source collection id consists of the images that are to be trained in ML while\n",
     "\n",
@@ -320,7 +174,7 @@
    ],
    "source": [
     "collection = Collection.fetch('rti_rwanda_crop_type_labels')#downloading the labels\n",
-    "archive_path = collection.download('~/Downloads/Data')  # Will raise exception if the file already exists"
+    "collection.download('~/Downloads/Data')  # Will raise exception if the file already exists"
    ]
   },
   {
@@ -345,7 +199,7 @@
    ],
    "source": [
     "collection = Collection.fetch('rti_rwanda_crop_type_source') #downloading the source images\n",
-    "archive_path = collection.download('~/Downloads/Data')   # Will raise exception if the file already exists"
+    "collection.download('~/Downloads/Data')   # Will raise exception if the file already exists"
    ]
   },
   {
@@ -1125,9 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
