Add Binder links to Lecture 2

--- a/Lecture 2/exercises/1_exploring_input_data.ipynb
+++ b/Lecture 2/exercises/1_exploring_input_data.ipynb
@@ -7,6 +7,8 @@
     "Exercise 1 - Exploring Input Data\n",
     "---\n",
     "\n",
+    "<a style=\"display: inline-block;\" href=\"https://mybinder.org/v2/gh/RadiantMLHub/ml4eo-bootcamp-2021/main?filepath=Lecture%202%2Fexercises%2F1_exploring_input_data.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Launch in Binder\"/></a>\n",
+    "\n",
     "For this exercise we will be working with a dataset which was collected in the field in South Africa. This dataset contains 1000 crop fields are information about the crop type in this field, irrigation information, and geographic information. We will be using this dataset to create a labeled training dataset consisting of raster crop labels and a timeseries of matching Sentinel-2 Imagery."
    ]
   },
