--- a/Lecture 2/exercises/2_cleaning_input_data.ipynb
+++ b/Lecture 2/exercises/2_cleaning_input_data.ipynb
@@ -7,6 +7,8 @@
     "Exercise 2 - Cleaning Input Data\n",
     "---\n",
     "\n",
+    "<a style=\"display: inline-block;\" href=\"https://mybinder.org/v2/gh/RadiantMLHub/ml4eo-bootcamp-2021/main?filepath=Lecture%202%2Fexercises%2F2_cleaning_input_data.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Launch in Binder\"/></a>\n",
+    "\n",
     "In this exercise we will work with the same input data as the first exercise. We will convert the input data from the shapefile format to a more user-friendly GeoJSON format, reproject to the same projection as the Sentinel-2 Imagery will be in, fix invalid geometries, and rename similar field values so that they are the same."
    ]
   },
