--- a/Lecture 2/exercises/3_matching_imagery.ipynb
+++ b/Lecture 2/exercises/3_matching_imagery.ipynb
@@ -7,6 +7,8 @@
     "Exercise 3 - Matching Imagery\n",
     "---\n",
     "\n",
+    "<a style=\"display: inline-block;\" href=\"https://mybinder.org/v2/gh/RadiantMLHub/ml4eo-bootcamp-2021/main?filepath=Lecture%202%2Fexercises%2F3_matching_imagery.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Launch in Binder\"/></a>\n",
+    "\n",
     "For this exercise we will match our input data with Sentinel-2 Imagery which matches the spatial and temporal extent of the input data. We will use the same temporal range that we explored in the first exercise but you can modify this value to be whatever you like. We can see with this next cell that our input data all falls within one Sentinel-2 tile (34HCH)."
    ]
   },
