--- a/Lecture 2/exercises/4_rasterizing_input_data_packaging_imagery.ipynb
+++ b/Lecture 2/exercises/4_rasterizing_input_data_packaging_imagery.ipynb
@@ -7,6 +7,8 @@
     "Exercise 4 - Rasterizing Input Data and Packaging Imagery\n",
     "---\n",
     "\n",
+    "<a style=\"display: inline-block;\" href=\"https://mybinder.org/v2/gh/RadiantMLHub/ml4eo-bootcamp-2021/main?filepath=Lecture%202%2Fexercises%2F4_rasterizing_input_data_packaging_imagery.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Launch in Binder\"/></a>\n",
+    "\n",
     "In this last exercise we will rasterize the input data, create a JSON file which defines the mapping of raster values to class, and crop our imagery to the extent of the final label raster. This first cell is responsible for rasterizing the input data and creating the raster value mapping file."
    ]
   },
