Add Binder links to Lecture 5

--- a/Lecture 5/exercises/1_create_source_imagery_stac_item.ipynb
+++ b/Lecture 5/exercises/1_create_source_imagery_stac_item.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Create Source Imagery STAC Item\n",
     "\n",
+    "<a style=\"display: inline-block;\" href=\"https://mybinder.org/v2/gh/RadiantMLHub/ml4eo-bootcamp-2021/main?filepath=Lecture%205%2Fexercises%2F1_create_source_imagery_stac_item.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Launch in Binder\"/></a>\n",
+    "\n",
     "In this exercise, we will:\n",
     "\n",
     "* Discuss STAC Items and what they represent\n",
