--- a/Lecture 5/exercises/2_create_stac_label_item.ipynb
+++ b/Lecture 5/exercises/2_create_stac_label_item.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Create Label STAC Item\n",
     "\n",
+    "<a style=\"display: inline-block;\" href=\"https://mybinder.org/v2/gh/RadiantMLHub/ml4eo-bootcamp-2021/main?filepath=Lecture%205%2Fexercises%2F2_create_stac_label_item.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Launch in Binder\"/></a>\n",
+    "\n",
     "In the [first exercise](./1_create_source_imagery_stac_item.ipynb) we learned about STAC Items and Assets, and we created a STAC Item to represent our source image tile. In this exercise, we will:\n",
     "\n",
     "* Describe how STAC Extensions enhance STAC Items\n",
