--- a/Lecture 5/exercises/3_create_stac_collection.ipynb
+++ b/Lecture 5/exercises/3_create_stac_collection.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Create a STAC Collection\n",
     "\n",
+    "<a style=\"display: inline-block;\" href=\"https://mybinder.org/v2/gh/RadiantMLHub/ml4eo-bootcamp-2021/main?filepath=Lecture%205%2Fexercises%2F3_create_stac_collection.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Launch in Binder\"/></a>\n",
+    "\n",
     "In the [second exercise](./2_create_stac_label_item.ipynb) we learned about STAC Extensions, and we created a STAC Item to represent our label assets. In this exercise, we will:\n",
     "\n",
     "* Describe how Items can be grouped together into Collections\n",
