--- a/Lecture 5/exercises/4_training_data_from_radiant_mlhub.ipynb
+++ b/Lecture 5/exercises/4_training_data_from_radiant_mlhub.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Training Data from Radiant MLHub\n",
     "\n",
+    "<a style=\"display: inline-block;\" href=\"https://mybinder.org/v2/gh/RadiantMLHub/ml4eo-bootcamp-2021/main?filepath=Lecture%205%2Fexercises%2F4_training_data_from_radiant_mlhub.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Launch in Binder\"/></a>\n",
+    "\n",
     "Now that we have an understanding of the STAC spec and how it relates to some example training data, we can move on to using the Radiant MLHub API to obtain training datasets."
    ]
   },
